syntax = "proto3";

message AuthenticationChallengeRequest {
}

message AuthenticationChallengeResponse {
    message Challenge { 
        string did = 1;
        string nonce = 2;
    }
    Challenge challenge = 1;
    bytes signature = 2;
}

message AuthenticationRequest {
    string nonce = 1;
}

message AuthenticationResponse {
    string token = 1;
}